# CBC_tg_bot

./: .env.example  .gitignore  .prospector-fix.yaml  CHANGES_SUMMARY.md  CLAUDE.md  DATA_TRANSFER_FIX.md  DEADLINES_FEATURE.md  DIALOG_FIXES.md  EXPORT_FIXES_SUMMARY.md  FINAL_FIXES.md  FIXES_SUMMARY.md  GOOGLE_DRIVE_DISABLE.md  GOOGLE_DRIVE_FIX.md  IMPROVEMENTS_REPORT.md  LICENSE  LOGGING_IMPROVEMENTS.md  RACE_CONDITION_FIX_SUMMARY.md  RBAC_README.md  README_SETUP.md  SWAP_MENU_UPDATE.md  TASK_STATUS_BROADCAST_README.md  add_task_status_broadcast.py  alembic.ini  analyze_interview_bookings.py  analyze_popularity.py  broadcast_texts.py  check_applications_db.py  check_databases.py  check_priority_fields.py  daily_statistics.py  deploy.sh  export_applications.py  final_analysis_report.py  generate_position_file_mapping.py  main.py  manual_google_sync.py  message_accepted.txt  populate_evaluated_applications.py  populate_interview_timeslots.py  pyproject.toml  (+14 more)
.github/: CODEOWNERS  copilot-instructions.md
alembic/: env.py  script.py.mako
config/: broadcasts.json  career_info.json  config.py  grant_lessons.json  lectory.json  lectures.json  logging_levels.json  photo_file_ids.json  position-file_map.json  position_id_mapping.json  selection_config.json  task_file_ids.json  tracks_config.json
docs/: PHOTO_OPTIMIZATION.md  RBAC_SYSTEM.md  applications_review.md  creative_selection_part_2.md  forum_section.md  grants-section.md  interview_system.md  new_start_system.md  online_section.md  orm_changes.md  registration_dashboard.md  timer_volunteer_p2.md  vol-part2-boradcast.md  volunteer-selection-part-1.md  volunteer_selectionpart_2.md
migrations/: 001_create_users_table.sql  (+16 more)
(+298 files in other folders)
