[project]
name = "cbc-tg-bot"
version = "0.1.0"
description = "Tht bot for CBC organization"
authors = [
    {name = "zobkov",email = "112057887+zobkov@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "aiogram-dialog (>=2.4.0,<3.0.0)",
    "psycopg-pool (>=3.2.7,<4.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "environs (>=14.4.0,<15.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
