[project]
name = "cbc-tg-bot"
version = "0.1.0"
description = "Tht bot for CBC organization"
authors = [
    {name = "zobkov",email = "112057887+zobkov@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "aiogram-dialog (>=2.4.0,<3.0.0)",
    "psycopg-pool (>=3.2.7,<4.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "environs (>=14.4.0,<15.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "weasyprint (>=66.0,<67.0)",
    "better-profanity (>=0.7.0,<0.8.0)",
    "psycopg (>=3.2.12,<4.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "google-api-core (>=2.28.1,<3.0.0)",
    "google-auth (>=2.42.1,<3.0.0)",
    "google-api-python-client (>=2.186.0,<3.0.0)",
    "apscheduler (>=3.11.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false